--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:url"                content="www.sitemasdev.xyz" />
+    <meta property="og:type"               content="website" />
+    <meta property="og:title"              content="Vista de la Temperatura" />
+    <meta property="og:description"        content="Se puede contralar la temperatura?" />
     <meta property="og:image" content="https://img.freepik.com/vector-gratis/temperaturas-termometro-frio-caliente_18591-7865.jpg?w=2000" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
